# testrunner

./: .gitignore  CMakeLists.txt  LICENSE  README.md  library.json  notes.txt
.github/workflows/: cmake.yml
cmake/: CMakeDeps.cmake  CMakeShared.cmake  FindLLDB.cmake  TrunCommonOptions.cmake
docs/: trun.manpage
src/app/: main.cpp  tcov.cpp  trun.cpp
src/app/otherexe/: CMakeLists.txt  otherexe.cpp
src/app/tcov/: CMakeLists.txt  tcov.cpp
src/app/trun/: CMakeLists.txt  trun.cpp
src/coverage/: Breakpoint.cpp  Breakpoint.h  Config.cpp  Config.h  Coverage.cpp  Coverage.h  SymbolResolver.cpp  SymbolResolver.h  SymbolTypeChecker.cpp  SymbolTypeChecker.h
src/coverage/reporting/: ReportBase.h  ReportConsole.cpp  ReportConsole.h  ReportDiff.cpp  ReportDiff.h  ReportLCOV.cpp  ReportLCOV.h
src/exembedded/: main_embedded.cpp
src/exshared/: exshared.cpp  pure.c
src/exstatic/: exstatic.cpp
src/shared/: ArgParser.h  CoverageIPCMessages.h  dirscanner.h  dynlib.h  glob.h  strutil.h  testlibversion.cpp  testlibversion.h  timer.cpp  version_t.h
src/shared/ipc/: IPCBufferedWriter.cpp  IPCCore.h  IPCDecoder.cpp  IPCDecoder.h  IPCDecoderBase.h  IPCEncoder.h  IPCEncoderBase.h  IPCSerializer.cpp
src/shared/ipc/tests/: test_ipc_common.h  test_ipc_messages.cpp
src/shared/unix/: dirscanner_unix.cpp  dynlib_unix.cpp  dynlib_unix.h  process.cpp  process.h
src/shared/win32/: dirscanner_win32.cpp
src/testrunner/: ArgParser.h  CoverageIPCMessages.cpp  CoverageIPCMessages.h  IPCBase.h  IPCMessages.cpp  IPCMessages.h  asserterror.cpp  asserterror.h  config.cpp  config.h  coveragerpcbrige.cpp  coveragerpcbrige.h  dirscanner.cpp  dirscanner.h  dirscanner_linux.cpp  dirscanner_unix.cpp  dirscanner_win32.cpp  dynlib.h  dynlib_embedded.cpp  dynlib_embedded.h  dynlib_linux.cpp  dynlib_linux.h  dynlib_unix.cpp  dynlib_unix.h  dynlib_win32.cpp  dynlib_win32.h  funcexecutors.cpp  funcexecutors.h  glob.cpp  logger.cpp  logger.h  logger_internal.h  main.cpp  module.cpp  module.h  module_linux.cpp  module_linux.h  module_mac.cpp  module_mac.h  module_win32.cpp  (+35 more)
src/testrunner/embedded/: dynlib_embedded.cpp  dynlib_embedded.h  logger.cpp  logger.h
src/testrunner/ext_testinterface/: testinterface.h  testinterface_v1.h
src/testrunner/ipc/: IPCBase.h  IPCBufferedWriter.h  IPCCore.h  IPCDecoder.cpp  IPCDecoder.h  IPCDecoderBase.h  IPCEncoder.cpp  IPCEncoder.h  IPCMessage.h  IPCMessages.cpp  IPCMessages.h  IPCSerializer.h
src/testrunner/ipc/tests/: test_ipc_bufferedwriter.cpp  test_ipc_messages.cpp
src/testrunner/reporting/: reportconsole.cpp  reportconsole.h  reportingbase.cpp  reportingbase.h  reportjson.cpp  reportjson.h  reportjsonext.cpp  reportjsonext.h
src/testrunner/tests/: test_assert.cpp  test_cdepends.cpp  test_coverage.cpp  test_depends.cpp  test_dirscanner_nix.cpp  test_exception.cpp  test_execorder.cpp  test_fromc.c  test_jsonreport.cpp  test_main.cpp  test_mdepends.cpp  test_module_nix.cpp  test_rust.cpp  test_strutil.cpp  test_testfunc.cpp  test_testmod.cpp  test_timer.cpp  test_v1module.cpp
src/testrunner/unix/: IPCFifoUnix.cpp  IPCFifoUnix.h  dirscanner_unix.cpp  dynlib_unix.cpp  dynlib_unix.h  process.cpp  process.h  subprocess.cpp  subprocess.h
src/testrunner/win32/: dirscanner_win32.cpp  dynlib_win32.cpp  dynlib_win32.h
src/testv1/: test_v1module.cpp
src/testv2/: test_v2module.cpp  testinterface.h
trunwindows/: trunwindows.sln  trunwindows.vcxproj  trunwindows.vcxproj.filters
trunwindows/fmt/: fmt.vcxproj
trunwindows/gnklog/: gnklog.vcxproj
trunwindows/trun_utests/: trun_utests.cpp  trun_utests.h  trun_utests.vcxproj
trunwindows/trunlib/: trunlib.cpp  trunlib.vcxproj
